added responsive navbar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kids education</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header class="container">
+        <nav class="navbar">
+            <div class="logo">
+                <img src="assets/logo.png" alt="">
+                <h1 class="logo-name">SCHOOL</h1>
+            </div>
+            <!-- hamburger menu -->
+             <div class="hamburger">
+                <i class="fa-solid fa-bars"></i>
+             </div>
+            <div class="nav-item">
+                <ul>
+                    <li><a class="bg-orange" href="#">Home</a></li>
+                    <li><a class="bg-skyblue" href="#">About</a></li>
+                    <li><a class="bg-lightblue" href="#">Facilities</a></li>
+                    <li><a class="bg-blue" href="#">Admission</a></li>
+                </ul>
+            </div>
+            <div class="nav-btn">
+                <button id="btn">Contact</button>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
