added banner section with responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- header start -->
     <header class="container">
+
+        <marquee direction="left">Enroll your amazing session 2025.</marquee>
+
         <nav class="navbar">
             <div class="logo">
                 <img src="assets/logo.png" alt="">
@@ -31,5 +35,23 @@
             </div>
         </nav>
     </header>
+    <!-- header ends -->
+
+
+    <!-- main start -->
+     <main class="container">
+        <!-- banner section start -->
+         <section class="banner">
+            <div class="banner-content">
+                <h1 class="banner-header"><span class="bg-orange">Empowering</span>  <br> students from small <br> age <span class="bg-skyblue">towards vision</span></h1>
+                <p class="banner-disc">With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="btn" id="btn">Enroll Now</button>
+            </div>
+            <div class="banner-image">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+         </section>
+     </main>
+
 </body>
 </html>
