--- a/index.html
+++ b/index.html
@@ -51,6 +51,35 @@
                 <img src="assets/hero-kids.png" alt="">
             </div>
          </section>
+         <!-- banner section ends -->
+
+         <!-- curriculum section start -->
+         <section class="curriculum">
+            <h1>Standard Curriculum</h1>
+
+            <div class="curriculum-card">
+                <div class="curriculum-card-item">
+                    <img src="assets/kinder.png" alt="">
+                    <h2>Kinder (3-6) Years</h2>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                    <span class="bg-skyblue">read more</span>
+                </div>
+
+                <div class="curriculum-card-item" id="item-1">
+                    <img src="assets/elementary.png" alt="">
+                    <h2>Elementary School</h2>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                    <span class="bg-orange">read more</span>
+                </div>
+
+                <div class="curriculum-card-item" id="item-2">
+                    <img src="assets/middle.png" alt="">
+                    <h2>Middle (10-16) Years</h2>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                    <span class="bg-blue">read more</span>
+                </div>
+            </div>
+         </section>
      </main>
 
 </body>
