added arrow icon

--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
                     <span class="bg-blue">read more</span>
                 </div>
             </div>
+
+            <div class="arrow">
+                <span class="arrow-icon"><i class="fa-solid fa-chevron-left"></i></span>
+                <span class="arrow-icon"><i class="fa-solid fa-chevron-right"></i></span>
+            </div>
          </section>
+
+         <!-- curriculum section ends -->
+
      </main>
 
 </body>
