added our story section with responsive

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 
     <!-- main start -->
-     <main class="container">
+     <main>
         <!-- banner section start -->
-         <section class="banner">
+         <section class="banner container">
             <div class="banner-content">
                 <h1 class="banner-header"><span class="bg-orange">Empowering</span>  <br> students from small <br> age <span class="bg-skyblue">towards vision</span></h1>
                 <p class="banner-disc">With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
@@ -54,7 +54,7 @@
          <!-- banner section ends -->
 
          <!-- curriculum section start -->
-         <section class="curriculum">
+         <section class="curriculum container">
             <h1>Standard Curriculum</h1>
 
             <div class="curriculum-card">
@@ -87,7 +87,62 @@
          </section>
 
          <!-- curriculum section ends -->
+         <section class="story">
+            <h1>Our Story</h1>
+            <div class="story-content">
+                <div class="full-image">
+                    <div class="image"> 
+                        <img src="assets/story-1.png" alt="">
+                    </div>
+                    <div class="content">
+                        <button class="story-btn">November 19, 2019</button>
+                        <h1>A fun toddler coloring training on classroom</h1>
+                        <p>Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
+                    </div>
+                </div>
+    
+                <div class="card">
+                    <div class="card-item">
+                        <div class="image">
+                            <img src="assets/story-2.png" alt="">
+                        </div>
+                        <button class="story-btn">November 19, 2019</button>
+                        <h1>Find out if a school fits the family’s needs</h1>
+                    </div>
 
+                    <div class="card-item">
+                        <div class="image">
+                            <img src="assets/story-3.png" alt="">
+                        </div>
+                        <button class="story-btn">September 10, 2019</button>
+                        <h1>Find out if a school fits the family’s needs</h1>
+                    </div>
+
+                    <div class="card-item">
+                        <div class="image">
+                            <img src="assets/story-4.png" alt="">
+                        </div>
+                        <button class="story-btn">July 19, 2019</button>
+                        <h1>Find out if a school fits the family’s needs</h1>
+                    </div>
+
+                    <div class="card-item">
+                        <div class="image">
+                            <img src="assets/story-5.png" alt="">
+                        </div>
+                        <button class="story-btn">November 19, 2019</button>
+                        <h1>Find out if a school fits the family’s needs</h1>
+                    </div>
+
+                </div>
+            </div>
+            
+            <div class="View">
+                <button>View All</button>
+            </div>
+         </section>
      </main>
 
 </body>
