--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                 <span class="arrow-icon"><i class="fa-solid fa-chevron-right"></i></span>
             </div>
          </section>
+        <!-- curriculum section ends -->
 
-         <!-- curriculum section ends -->
+        <!-- story section start -->
          <section class="story">
             <h1>Our Story</h1>
             <div class="story-content">
@@ -143,7 +144,40 @@
                 <button>View All</button>
             </div>
          </section>
-     </main>
+         <!-- story section ends -->
 
+        </main>
+        <!-- footer section start -->
+        <footer class="footer">
+            <div class="education">
+                <div class="kids">
+                    <img src="assets/logo.png" alt="">
+                    <h1>Kids <br> Education</h1>
+                </div>
+                <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            </div>
+
+            <div class="nav">
+                <h1>About School</h1>
+
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Facilities</a></li>
+                    <li><a href="#">Admission</a></li>
+                </ul>
+            </div>
+
+            <div class="keep">
+                <h1>Keep In Touch</h1>
+
+                <div class="social-icon">
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/google+.png" alt="">
+                    <img src="assets/dribble.png" alt="">
+                    <img src="assets/twitter.png" alt="">
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
